<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>m80106_bringup</name>
  <version>0.3.0</version>
  <description>
    Interactive terminal UI (FTXUI) and bringup tooling for the
    Unitree GO-M8010-6 motor over RS-485.

    Provides two executables:
      m80106_ui_node    — htop-style TUI: scan bus, monitor telemetry,
                          tune PID gains and control modes interactively.
      m80106_change_id  — one-shot CLI: change a motor's RS-485 ID.

    FTXUI (https://github.com/ArthurSonzogni/FTXUI) is fetched at build
    time via CMake FetchContent — no system TUI library is required.
  </description>

  <maintainer email="maintainer@example.com">Maintainer</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>m80106_lib</depend>
  <depend>serial</depend>

  <!-- FTXUI TUI library is fetched via CMake FetchContent at build time.
       git is required on the build host. -->
  <build_depend>git</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
